--- a/src/package.json
+++ b/src/package.json
@@ -6,9 +6,9 @@
     "moggiez"
   ],
   "dependencies": {
-    "moggies-auth": "^0.1.1",
-    "moggies-db": "^0.1.5",
-    "moggies-lambda-helpers": "^0.1.0",
+    "@moggiez/moggies-auth": "^0.2.0",
+    "@moggiez/moggies-db": "^0.2.0",
+    "@moggiez/moggies-lambda-helpers": "^0.2.1",
     "uuid": "^8.3.2"
   },
   "scripts": {
